fixing spacing error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,7 +173,7 @@ html {
   
     
     .sectionMotivations{
-      padding-top: 50px 0;
+      padding: 50px 0;
     }
     /*-----------------------------------*\
     #LANGUAGES MINI-SECTION
